@@ -1,5 +1,8 @@
 Changes for APR 1.3.0
 
+  *) Implement apr_thread_yield on Unix in terms of pthread_yield or
+     sched_yield. [Keisuke Nishida <keisuke.nishida gmail.com>]
+
   *) Provide folding in autogenerated .manifest files for Win32 builders
      using VisualStudio 2005  [William Rowe]
 
